[package]
name = "k8s-crds-codegen"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
anyhow = "1.0.57"
k8s-openapi = { version = "0.19.0", features = ["v1_26"] }
reqwest = { version = "0.11.10", features = ["blocking"] }
serde_json = "1.0.81"
serde_yaml = "0.8.24"
tracing = "0.1.35"
tracing-subscriber = "0.3.11"

[dev-dependencies]
insta = "1.15.0"
