[package]
name = "k8s-crds-test"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
k8s-openapi = { version = "0.15.0", features = ["v1_20"] }
k8s-crds-codegen = { path = "../k8s-crds-codegen" }
tracing-subscriber = "0.3.11"
serde = "1.0.137"

[dev-dependencies]
insta = "1.15.0"
serde_yaml = "0.8.24"
