[workspace]
[package]
name = "argo-events-crds"
version = "0.1.0"
edition = "2021"
authors = ["Andrew Jeffery <dev@jeffas.io>"]
description = "CRDs for the argo-events deployment"
repository = "https://github.com/jeffa5/k8s-crds/"
license = "MIT"
keywords = ["kubernetes", "k8s", "crd", "openapi"]
categories = ["api-bindings", "config", "virtualization"]

[dependencies]
k8s-openapi = { version = "0.15.0", features = ["v1_20"] }
serde = { version = "1.0.137", features = ["derive"] }
serde_json = "1.0.82"
