[workspace]
[package]
name = "flux-crds"
version = "0.1.0"
edition = "2021"
authors = ["Andrew Jeffery <dev@jeffas.io>"]
description = "CRDs for the flux deployment"
repository = "https://github.com/jeffa5/k8s-crds/"
license = "MIT"
keywords = ["kubernetes", "k8s", "crd", "openapi"]
categories = ["api-bindings", "config", "virtualization"]

[dependencies]
k8s-openapi = { version = "0.19", features = ["v1_26"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
